--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "colors": "^1.4.0",
     "concurrently": "^7.3.0",
     "cors": "^2.8.5",
+    "debug": "^4.3.4",
     "express": "^4.18.1",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.19",
