--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cors": "^2.8.5",
     "debug": "^4.3.4",
     "express": "^4.18.1",
+    "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.19",
     "react": "^18.2.0",
@@ -22,10 +23,12 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "start": "PORT=3005 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "data:import": "node backend/seeder.js"
+    "data:import": "node backend/seeder.js",
+    "server": "DEBUG=app:* nodemon backend/server.js"
   },
   "eslintConfig": {
     "extends": [
