--- a/package.json
+++ b/package.json
@@ -23,12 +23,13 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "PORT=3005 react-scripts start",
+    "client": "PORT=3005 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "data:import": "node backend/seeder.js",
-    "server": "DEBUG=app:* nodemon backend/server.js"
+    "server": "DEBUG=app:* nodemon backend/server.js",
+    "start": "concurrently \"npm run server\" \"npm run client\""
   },
   "eslintConfig": {
     "extends": [
