--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "concurrently": "^7.3.0",
     "cors": "^2.8.5",
     "debug": "^4.3.4",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-validator": "^6.14.2",
     "morgan": "^1.10.0",
@@ -18,7 +19,9 @@
     "nodemon": "^2.0.19",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
+    "react-toastify": "^9.0.7",
     "sass": "^1.53.0",
     "sequelize": "^6.21.3",
     "web-vitals": "^2.1.4"
